Implemented smooth transition to blogs!

--- a/apps/whoisme/app/globals.css
+++ b/apps/whoisme/app/globals.css
@@ -14,7 +14,7 @@
   --bg-primary: #cecdc3;
   --text-primary: #100f0f;
   --text-secondary: #737373;
-  --text-link: #292929;
+  --text-link: #373737;
   --border-primary: #4d4d4d;
 }
 
@@ -22,7 +22,7 @@
   --bg-primary: #100f0f;
   --text-primary: #cecdc3;
   --text-secondary: #a3a3a3;
-  --text-link: #272727;
+  --text-link: #5e5e5e;
   --border-primary: #262626;
 }
 
