edited the value for text-link!

--- a/apps/whoisme/app/globals.css
+++ b/apps/whoisme/app/globals.css
@@ -22,7 +22,7 @@
   --bg-primary: #100f0f;
   --text-primary: #cecdc3;
   --text-secondary: #a3a3a3;
-  --text-link: #5e5e5e;
+  --text-link: #424242;
   --border-primary: #262626;
 }
 
